# ImacDream_ImacNightmare

./: CMakeLists.txt  README.md
CMake/: FindSDL_MIXER.cmake  FindSDL_mixer.cmake
dependencies/include/: mesh.hpp  model.hpp  modelOriginal.hpp  shader.hpp
glimac/include/: BBox.hpp  FreeflyCamera.hpp  Geometry.hpp  Image.hpp  Mesh.hpp  Model.hpp  SDLWindowManager.hpp  Texture.hpp  TrackballCamera.hpp  Vertex.hpp  common.hpp  glm.hpp
glimac/include/glimac/: CameraAttributes.hpp  Cone.hpp  FreeflyCamera.hpp  Model.cpp  Program.hpp  TrackballCamera.hpp  actualPath.hpp  camera.hpp  enigme.hpp  font.hpp  glm.hpp  modelLoading.hpp
glimac/src/: Cone.cpp  FreeflyCamera.cpp  Geometry.cpp  Image.cpp  Mesh.cpp  Model.cpp  Program.cpp  SDLWindowManager.cpp  Shader.cpp  Sphere.cpp  TrackballCamera.cpp  font.cpp  modelLoading.cpp  tiny_obj_loader.cpp
project/: CMakeLists.txt  main.cpp
project/assets/models/: cubetexture.mtl  monkey.mtl  simpleBox.mtl
project/assets/models/LowPolyForest/: CoordonnéesCameraMonde2.txt  LowPolyForest.mtl  LowPolyForest.xml  island.mtl  monde2.mtl  monde2final.mtl
project/assets/models/LowPolyTrees/: LowPolyTrees.mtl  LowPolyTrees.xml  LowPolyTreesSolved.mtl
project/assets/models/Skybox/: fondfin.mtl  fondfin.xml  fondmonde1.mtl  fondmonde1.xml  fondmonde2.mtl  fondmonde2.xml  fondmonde3.mtl  fondmonde3.xml
project/assets/models/monde_3/: monde_3.mtl  monde_3.xml  monde_3_portal.mtl
project/assets/models/start_end/: Start_End.mtl  start_end.xml
project/shaders/: directionallight.fs.glsl  normals.fs.glsl  text.fs.glsl  text.vs.glsl
ressources/: install.txt
src/execs/: main.cpp
src/impl/glad/: glad.c  glad.h
